--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     </head>
+
     <body ng-app="jsCodingTest">
+
         <main ng-controller="GiveTheGovernmentABurrito">
-            Write your HTML here.
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-md-12" >
+                        <h1>
+                            Give The Government A Burrito
+                        </h1>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12" >
+                        <a class="btn btn-default" href="#" role="button" ng-click="reloadPackages();" >Reload</a>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="row">
+                    <div class="col-md-12" >
+                        <div ng-show="error != null" class="warning bg-danger">
+                            {{ error }}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div ng-repeat="package in packages" class="col-md-12" >
+                        <a href="#" class="thumbnail">
+                            <img class="img-responsive" src="{{ package.images[0].medium }}" alt="{{ package.name }}" />
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
         </main>
 
-        <script src="lib/angular.min.js"></script>
-        <script src="lib-integration.js"></script>
-        <script src="node_modules/citypantry-js-lib/dist/lib-es5-with-browser-polyfill.js"></script>
-        <script src="your-code.js"></script>
+    <script src="lib/angular.min.js"></script>
+    <script src="lib-integration.js"></script>
+    <script src="node_modules/citypantry-js-lib/dist/lib-es5-with-browser-polyfill.js"></script>
+    <script src="your-code.js"></script>
+
     </body>
+
 </html>
