--- a/index.html
+++ b/index.html
@@ -2,60 +2,76 @@
 
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+</head>
 
-    <body ng-app="jsCodingTest">
+<body ng-app="jsCodingTest">
 
-        <main ng-controller="GiveTheGovernmentABurrito">
+<main ng-controller="GiveTheGovernmentABurrito">
 
-            <div class="container">
+    <div class="container">
 
-                <div class="row">
-                    <div class="col-md-12" >
-                        <h1>
-                            Give The Government A Burrito
-                        </h1>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col-xs-12" >
+                <h1>
+                    Give The Government A Burrito
+                </h1>
+            </div>
+        </div>
 
-                <div class="row">
-                    <div class="col-md-12" >
-                        <a class="btn btn-default" href="#" role="button" ng-click="reloadPackages();" >Reload</a>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col-xs-12" >
+                <a class="btn btn-default" href="#" role="button" ng-click="reloadPackages()" >Reload</a>
+            </div>
+        </div>
 
-                <br>
+        <br>
 
-                <div class="row">
-                    <div class="col-md-12" >
-                        <div ng-show="error != null" class="warning bg-danger">
-                            {{ error }}
+        <div class="row" ng-switch="errorFlag" >
+            <div class="col-xs-12" >
+                <div ng-switch-when="true" >
+                    <div class="col-xs-12" >
+                        <div ng-show="errorMsg" class="warning bg-warning">
+                            {{ errorMsg }}
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div ng-repeat="package in packages" class="col-md-12" >
-                        <a href="#" class="thumbnail">
-                            <img class="img-responsive" src="{{ package.images[0].medium }}" alt="{{ package.name }}" />
-                        </a>
+                <div ng-switch-default class="row" >
+                    <div class="col-xs-12" >
+                        <div ng-if="packages.length < 1">
+                            <div class="info bg-info">
+                                {{ noPackagesMsg }}
+                            </div>
+                        </div>
+                        <div ng-if="packages.length > 0">
+                            <div ng-repeat="package in packages" class="row" >
+                                <div class="col-xs-12" >
+                                    <p class="text-left">
+                                        {{ package.name }}
+                                    </p>
+                                    <img class="img-responsive" src="{{ package.images[0].medium }}" alt="{{ package.name }}" />
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
             </div>
+        </div>
 
-        </main>
+    </div>
 
-    <script src="lib/angular.min.js"></script>
-    <script src="lib-integration.js"></script>
-    <script src="node_modules/citypantry-js-lib/dist/lib-es5-with-browser-polyfill.js"></script>
-    <script src="your-code.js"></script>
+</main>
 
-    </body>
+<script src="lib/angular.min.js"></script>
+<script src="lib-integration.js"></script>
+<script src="node_modules/citypantry-js-lib/dist/lib-es5-with-browser-polyfill.js"></script>
+<script src="your-code.js"></script>
+
+</body>
 
 </html>
